include/abg-fwd.h
@@ -490,9 +490,6 @@ is_qualified_type(const type_or_decl_base*);
 qualified_type_def_sptr
 is_qualified_type(const type_or_decl_base_sptr&);
 
-type_base_sptr
-look_through_no_op_qualified_type(const shared_ptr<type_base>& t);
-
 function_type_sptr
 is_function_type(const type_or_decl_base_sptr&);
 
@@ -815,6 +812,9 @@ set_member_function_is_virtual(const function_decl_sptr&, bool);
 
 type_base_sptr
 strip_typedef(const type_base_sptr);
+
+decl_base_sptr
+strip_useless_const_qualification(const qualified_type_def_sptr t);
 
 type_base_sptr
 peel_typedef_type(const type_base_sptr&);
